# sentry-flake8

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  pyproject.toml  sentry_check.py  setup.cfg  setup.py
.github/workflows/: build.yml  ci.yml
src/: sentry_check.py
tests/: b001.py  b003.py  b005.py  b007.py  b009_b010.py  b101.py  b301_b302_b305.py  b303_b304.py  b306.py  test_sentry_check.py
tests/cases/: S002.py  S003.py  b001.py  b002.py  b003.py  b004.py  b005.py  b006_b008.py  b007.py  b009_b010.py  b101.py  b102.py  b314.py  b315.py  b316.py  b317.py
