[options]
package_dir =
     = src

[bdist_wheel]
# We enforce python 3 specific minor version range in setup.py.
python-tag = py3

[flake8]
ignore = E203, E302, E501, W503, C901
max-line-length = 100
max-complexity = 12
select = B,C,E,F,W,B9
exclude = .venv/,tests/cases/*

[metadata]
license_file = LICENSE
